--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -11,11 +11,11 @@
     "UploadDrive": "C:\\inetpub\\wwwroot\\Build\\FootbalBuzz",
     "DriveName": "Drive",
     "EmailConfiguration": {
-      "From": "oidc@appcoy.com",
-      "SmtpServer": "mail.appcoy.com",
+      "From": "e.osinnowo@gmail.com",
+      "SmtpServer": "smtp.gmail.com",
       "Port": 465,
-      "Username": "oidc@appcoy.com",
-      "Password": "OIDC@2020!!"
+      "Username": "e.osinnowo@gmail.com",
+      "Password": "Microsoft@2020!!"
     }
   },
   "ConnectionStrings": {
