--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AppSettings": {
     "Secret": "!!___@@FOOTBAL___!!@",
-    "UploadDrive": "C:\\inetpub\\wwwroot\\Build\\FootbalBuzz",
+    "UploadDrive": "/Users/mac/projects/oidc/WebAPI",
     "DriveName": "Drive",
     "EmailConfiguration": {
       "From": "e.osinnowo@gmail.com",
