--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -20,6 +20,8 @@
   },
   "ConnectionStrings": {
     //"Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
-    "Connection": "Server=192.168.65.0;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
+    // "Connection": "Server=192.168.65.0;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
+    "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework\"",
   }
+ 
 }
