--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -20,7 +20,7 @@
     }
   },
   "ConnectionStrings": {
-    //"Connection": "Server=192.168.65.0;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework",
-    "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework\""
+    //"Connection" :  "Server=192.168.65.0;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
+    "Connection" :  "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
   }
 }
