--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "AppSettings": {
     "Secret": "!!___@@FOOTBAL___!!@",
-    "UploadDrive": "/Users/mac/projects/oidc/WebAPI",
+    "UploadDrive": "/Users/mac/projects/OIDC/WebAPI",
     "DriveName": "Drive",
     "EmailConfiguration": {
       "From": "e.osinnowo@gmail.com",
@@ -19,8 +19,6 @@
     }
   },
   "ConnectionStrings": {
-   
-    "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
+    "Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
   }
- 
 }
