1. Vendor Management Refactoring   2. Separating InputViewModel & ViewModel

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -16,9 +16,12 @@
       "Port": 465,
       "Username": "e.osinnowo@gmail.com",
       "Password": "Microsoft@2020!!"
-    }
+    },
+    "BaseUrl": "https://localhost:8080"
   },
   "ConnectionStrings": {
     "Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
   }
 }
+
+//https://www.figma.com/file/HdRGECZQiW2fUbBrLSOo1y/Mobile-App-new?node-id=0%3A1
