--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -17,7 +17,8 @@
       "Port": 465,
       "Username": "liquidcoding2009@gmail.com",
       "Password": "Emmanuel@20201!!"
-    }
+    },
+    "BaseUrl": "http://159.89.22.14:5000"
   },
   "ConnectionStrings": {
    
