--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -11,11 +11,11 @@
     "UploadDrive": "/home/documents/orangeisland/WebAPI",
     "DriveName": "Drive",
     "EmailConfiguration": {
-      "From": "e.osinnowo@gmail.com",
+      "From": "OIDC Portal",
       "SmtpServer": "smtp.gmail.com",
-      "Port": 465,
-      "Username": "e.osinnowo@gmail.com",
-      "Password": "Microsoft@2020!!"
+      "Port": 587,
+      "Username": "emmanuel.osinnowo@appcoy.com",
+      "Password": "Emmanuel@2020"
     },
     "BaseUrl": "https://localhost:8080"
   },
