--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -11,13 +11,15 @@
     "UploadDrive": "/home/documents/orangeisland/WebAPI",
     "DriveName": "Drive",
     "EmailConfiguration": {
-      "From": "OIDC Portal",
-      "SmtpServer": "smtp.gmail.com",
-      "Port": 587,
-      "Username": "emmanuel.osinnowo@appcoy.com",
-      "Password": "Emmanuel@2020"
+      "From": "confirmation@pepisandbox.com",
+      "SmtpServer": "smtp.pepipost.com",
+      "Port": 25,
+      "Username": "liquidcoding2009",
+      "Password": "Popipost#2020"
     },
-    "BaseUrl": "https://localhost:8080"
+    "BaseUrl": "https://localhost:8080",
+    "PepipostBaseUrl": "https://api.pepipost.com/v5",
+    "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b"
   },
   "ConnectionStrings": {
     "Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
