--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -12,15 +12,19 @@
     "UploadDrive": "C:\\inetpub\\wwwroot\\Build\\FootbalBuzz",
     "DriveName": "Drive",
     "EmailConfiguration": {
-      "From": "OIDC Portal",
-      "SmtpServer": "smtp.pepipost.com",
-      "Port": 25,
-      "Username": "liquidcoding2009",
-      "Password": "Popipost#2020"
+      "EmailConfiguration": {
+        "From": "confirmation@pepisandbox.com",
+        "SmtpServer": "smtp.pepipost.com",
+        "Port": 25,
+        "Username": "liquidcoding2009",
+        "Password": "Popipost#2020"
+      },
+      "PepipostBaseUrl": "https://api.pepipost.com/v5",
+      "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b",
+      "BaseUrl": "http://159.89.22.14:5000"
     },
-    "BaseUrl": "http://159.89.22.14:5000"
-  },
-  "ConnectionStrings": {
-    "Connection" :  "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
+    "ConnectionStrings": {
+      "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
+    }
   }
 }
