--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,6 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
   "AppSettings": {
     "Secret": "!!___@@FOOTBAL___!!@",
     "UploadDrive": "/home/documents/orangeisland/WebAPI",
