--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -12,19 +12,18 @@
     "UploadDrive": "C:\\inetpub\\wwwroot\\Build\\FootbalBuzz",
     "DriveName": "Drive",
     "EmailConfiguration": {
-      "EmailConfiguration": {
-        "From": "confirmation@pepisandbox.com",
-        "SmtpServer": "smtp.pepipost.com",
-        "Port": 25,
-        "Username": "liquidcoding2009",
-        "Password": "Popipost#2020"
-      },
-      "PepipostBaseUrl": "https://api.pepipost.com/v5",
-      "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b",
-      "BaseUrl": "http://159.89.22.14:5000"
+      "From": "confirmation@pepisandbox.com",
+      "SmtpServer": "smtp.pepipost.com",
+      "Port": 25,
+      "Username": "liquidcoding2009",
+      "Password": "Popipost#2020"
     },
-    "ConnectionStrings": {
-      "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
-    }
+    "BaseUrl": "http://159.89.22.14:5000",
+    "PepipostBaseUrl": "https://api.pepipost.com/v5",
+    "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b"
+  },
+  "ConnectionStrings": {
+    "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
   }
 }
+//https://www.figma.com/file/HdRGECZQiW2fUbBrLSOo1y/Mobile-App-new?node-id=0%3A1
