--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -20,7 +20,8 @@
     },
     "BaseUrl": "https://localhost:8080",
     "PepipostBaseUrl": "https://api.pepipost.com/v5",
-    "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b"
+    "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b",
+    "OtpExpirationInMinutes" : 5
   },
   "ConnectionStrings": {
     "Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
