--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -20,7 +20,8 @@
     },
     "BaseUrl": "http://159.89.22.14:5000",
     "PepipostBaseUrl": "https://api.pepipost.com/v5",
-    "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b"
+    "PepipostApiKey": "4f0a5625681f50b43f3488864d86222b",
+    "OtpExpirationInMinutes" :  5
   },
   "ConnectionStrings": {
     "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
