--- a/AppService/AppService.csproj
+++ b/AppService/AppService.csproj
@@ -41,5 +41,8 @@
     <PackageReference Include="Refit" Version="5.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Pepipost" Version="5.0.4" />
+    <PackageReference Include="SendGrid" Version="9.21.0" />
+    <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.0" />
   </ItemGroup>
 </Project>
