--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -38,6 +38,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
     <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
     <PackageReference Include="Refit" Version="5.2.1" />
+    <PackageReference Include="Pepipost" Version="5.0.4" />
+    <PackageReference Include="SendGrid" Version="9.21.0" />
+    <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\" />
