Adjustments in AppSettings.json

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -19,7 +19,10 @@
       "Password": "Popipost#2020"
     },
     "BaseUrl": "https://localhost:8080",
-    "OtpExpirationInMinutes" : 5
+    "OtpExpirationInMinutes": 5,
+    "SendGridApiKey": "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",
+    "SendGridSenderEmail": " developer@cousant.com",
+    "SendGridSenderName": "Orange Island Test"
   },
   "ConnectionStrings": {
     "Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
