1. Separated Web Email Template From Mobile

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -22,7 +22,12 @@
     "OtpExpirationInMinutes": 5,
     "SendGridApiKey": "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",
     "SendGridSenderEmail": " developer@cousant.com",
-    "SendGridSenderName": "Orange Island Test"
+    "SendGridSenderName": "Orange Island Test",
+    "WebApp": {
+      "BaseUrl": "http://localhost3000",
+      "Register": "/register/veriried/",
+      "ResetPassword" :  "/password/reset/"
+    }
   },
   "ConnectionStrings": {
     "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
