Corrected Template Deep Linking

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -25,7 +25,7 @@
     "SendGridSenderName": "Orange Island Test",
     "WebApp": {
       "BaseUrl": "http://localhost3000",
-      "Register": "/register/veriried/",
+      "Register": "/register/verified/",
       "ResetPassword": "/password/reset/"
     }
   },
