Changes to EmailService to aggregate Mobile => Web

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -24,7 +24,7 @@
     "SendGridSenderEmail": " developer@cousant.com",
     "SendGridSenderName": "Orange Island Test",
     "WebApp": {
-      "BaseUrl": "http://localhost3000",
+      "BaseUrl": "http://localhost:3000",
       "Register": "/register/verified/",
       "ResetPassword" :  "/password/reset/"
     }
