--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -26,7 +26,7 @@
     "WebApp": {
       "BaseUrl": "http://localhost:3000",
       "Register": "/register/verified/",
-      "ResetPassword" :  "/password/reset/"
+      "ResetPassword": "/login/completereset/"
     }
   },
   "ConnectionStrings": {
