--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "AppSettings": {
     "Secret": "!!___@@FOOTBAL___!!@",
-    "UploadDrive": "/home/documents/orangeisland",
+    "UploadDrive": "/app",
     "DriveName": "Drive",
     "EmailConfiguration": {
       "From": "confirmation@pepisandbox.com",
