--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -10,6 +10,7 @@
     <Folder Include="DataAccess\DataContext\" />
     <Folder Include="DataAccess\Repository\" />
     <Folder Include="DataAccess\Repository\Abstractions\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
