--- a/AppService/AppService.csproj
+++ b/AppService/AppService.csproj
@@ -44,5 +44,6 @@
     <PackageReference Include="Pepipost" Version="5.0.4" />
     <PackageReference Include="SendGrid" Version="9.21.0" />
     <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.0" />
+    <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
   </ItemGroup>
 </Project>
