Complete Implementation -> Document

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -27,7 +27,8 @@
       "BaseUrl": "http://localhost:3000",
       "Register": "/register/verified/",
       "ResetPassword": "/password/reset/"
-    }
+    },
+    "FireBaseBucket": "oidc-1606928364813.appspot.com"
   },
   "ConnectionStrings": {
     "Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
