--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -27,7 +27,8 @@
       "BaseUrl": "http://localhost:3000",
       "Register": "/register/verified/",
       "ResetPassword": "/login/completereset/"
-    }
+    },
+    "FireBaseBucket": "oidc-1606928364813.appspot.com"
   },
   "ConnectionStrings": {
     "Connection": "Server=159.89.22.14;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
