--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -44,6 +44,7 @@
     <PackageReference Include="SendGrid" Version="9.21.0" />
     <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
+    <PackageReference Include="FCM.Net.Core" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup> 
   <Content Include="Templates\**"> 
