--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -7,6 +7,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
+  },
   "AppSettings": {
     "Secret": "!!___@@FOOTBAL___!!@",
     "UploadDrive": "/Users/mac/projects/oidc/WebAPI",
