--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ElasticConfiguration": {
-    "Uri": "http://localhost:9200"
+    "Uri": "http://159.89.22.14:9200"
   },
   "AllowedHosts": "*",
   "AppSettings": {
