Get Due Payments

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -36,6 +36,6 @@
     "RawHash": "3cc7bedd65683"
   },
   "ConnectionStrings": {
-    "Connection": "Server=46.101.193.47;User Id=sa;Password=Password2;Database=OrangeIsland;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
+    "Connection": "Server=.;User Id=sa;Password=Password2;Database=OrangeIslandTest;Trusted_Connection=False;MultipleActiveResultSets=True;App=EntityFramework"
   }
 }
