--- a/AppService/AppService.csproj
+++ b/AppService/AppService.csproj
@@ -50,6 +50,7 @@
     <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.0" />
     <PackageReference Include="FirebaseStorage.net" Version="1.0.3" />
     <PackageReference Include="FCM.Net.Core" Version="1.0.1" />
+    <PackageReference Include="QRCoder" Version="1.4.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="TembooSDK">
