--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -72,6 +72,7 @@
     <None Remove="Migrations\AppDbContextModelSnapshot.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Controllers\InstallmentController.cs" />
     <Compile Remove="Migrations\AppDbContextModelSnapshot.cs" />
   </ItemGroup>
 </Project>
